--- a/.github/workflows/kotlin_ci.yaml
+++ b/.github/workflows/kotlin_ci.yaml
@@ -14,9 +14,15 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Build with Gradle
         uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
         with:
-          arguments: build test
+          arguments: build
+      - name: Test with Gradle
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+         arguments: test
