Update CI workflow

--- a/.github/workflows/ci_integration_test.yaml
+++ b/.github/workflows/ci_integration_test.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: CI Integration tests
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
         run: chmod +x ./gradlew
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.4
-      - name: Test with Gradle
-        uses: gradle/gradle-build-action@v2
+      - name: Gradle Build Action
+        uses: gradle/gradle-build-action@v2.2.0
         with:
           arguments: integrationTest
