--- a/.github/workflows/ci_kotlin_ci.yaml
+++ b/.github/workflows/ci_kotlin_ci.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: CI build and unit tests
 
 on:
   push:
@@ -19,9 +19,9 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action
+        uses: gradle/wrapper-validation-action@v1.0.4
+      - name: Gradle Build Action
+        uses: gradle/gradle-build-action@v2.2.0
         with:
           arguments: build
       - name: Test with Gradle
