--- a/.github/workflows/ci_kotlin_ci.yaml
+++ b/.github/workflows/ci_kotlin_ci.yaml
@@ -25,6 +25,6 @@ jobs:
         with:
           arguments: build
       - name: Test with Gradle
-        uses: gradle/gradle-build-action
+        uses: gradle/gradle-build-action@v2.2.0
         with:
          arguments: test
