Remove daemon from CI

--- a/.github/workflows/ci_integration_test.yaml
+++ b/.github/workflows/ci_integration_test.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Gradle Build Action
         uses: gradle/gradle-build-action@v2.2.0
         with:
-          arguments: integrationTest
+          arguments: integrationTest --no-daemon
