--- a/.github/workflows/ci_kotlin_ci.yaml
+++ b/.github/workflows/ci_kotlin_ci.yaml
@@ -23,8 +23,8 @@ jobs:
       - name: Gradle Build Action
         uses: gradle/gradle-build-action@v2.2.0
         with:
-          arguments: build
+          arguments: build --no-daemon
       - name: Test with Gradle
         uses: gradle/gradle-build-action@v2.2.0
         with:
-         arguments: test
+         arguments: test --no-daemon
