--- a/.github/workflows/ci_kotlin_ci.yaml
+++ b/.github/workflows/ci_kotlin_ci.yaml
@@ -20,11 +20,16 @@ jobs:
         run: chmod +x ./gradlew
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.4
+      - name: Run diktat
+        uses: gradle/gradle-build-action@v2.2.0
+        with:
+          arguments: diktatCheck --no-daemon
       - name: Gradle Build Action
         uses: gradle/gradle-build-action@v2.2.0
         with:
           arguments: build --no-daemon
-      - name: Test with Gradle
-        uses: gradle/gradle-build-action@v2.2.0
+      - name: Upload SARIF Report
+        uses: github/codeql-action/upload-sarif@v2
+        if: ${{ always() }}
         with:
-         arguments: test --no-daemon
+          sarif_file: ${{ github.workspace }}
