--- a/.github/workflows/ci_integration_test.yaml
+++ b/.github/workflows/ci_integration_test.yaml
@@ -3,21 +3,14 @@ name: CI Integration tests
 on:
   push:
     branches: [ master ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1.0.4
+      - name: Setup Gradle
+        uses: ./.github/workflows/ci_setup_gradle.yaml
       - name: Gradle Build Action
         uses: gradle/gradle-build-action@v2.2.0
         with:
