--- a/.github/workflows/ci_diktat.yaml
+++ b/.github/workflows/ci_diktat.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup Gradle
-        uses: ./.github/workflows/ci_setup_gradle.yaml
+        uses: ./.github/workflows/ci_setup_gradle
       - name: Run diktat
         uses: gradle/gradle-build-action@v2.2.0
         with:
