--- a/.github/workflows/ci_diktat.yaml
+++ b/.github/workflows/ci_diktat.yaml
@@ -6,14 +6,14 @@ on:
   push:
 
 jobs:
+  setup_gradle:
+    uses: ./.github/workflows/ci_setup_gradle.yaml
   run_diktat:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: ls
         run: ls -la -R /home/runner/work/KDex
-      - name: Setup Gradle
-        uses: ./.github/workflows/ci_setup_gradle
       - name: Run diktat
         uses: gradle/gradle-build-action@v2.2.0
         with:
