--- a/.github/workflows/ci_kotlin_ci.yaml
+++ b/.github/workflows/ci_kotlin_ci.yaml
@@ -7,13 +7,11 @@ on:
     branches: [ master ]
 
 jobs:
+  setup_gradle:
+    uses: ./.github/workflows/ci_setup_gradle.yaml
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Gradle
-        uses: ./.github/workflows/ci_setup_gradle
       - name: Gradle Build Action
         uses: gradle/gradle-build-action@v2.2.0
         with:
