--- a/.github/workflows/ci_setup_gradle.yaml
+++ b/.github/workflows/ci_setup_gradle.yaml
@@ -6,8 +6,8 @@ on:
 jobs:
   setup_gradle:
     runs-on: ubuntu-latest
-
     steps:
+      - uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
