--- a/.github/workflows/ci_diktat.yaml
+++ b/.github/workflows/ci_diktat.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup_gradle.yaml
+      - uses: ./.github/actions/setup_gradle
       - name: ls
         run: ls -la -R /home/runner/work/KDex
       - name: Run diktat
