--- a/.github/actions/setup_gradle/action.yaml
+++ b/.github/actions/setup_gradle/action.yaml
@@ -4,12 +4,10 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+    - uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'adopt'
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-    - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@v1.0.4
+    - run: chmod +x ./gradlew
+      shell: bash
+    - uses: gradle/wrapper-validation-action@v1.0.4
