--- a/.github/workflows/ci_integration_test.yaml
+++ b/.github/workflows/ci_integration_test.yaml
@@ -5,11 +5,11 @@ on:
     branches: [ master ]
 
 jobs:
-  setup_gradle:
-    uses: ./.github/workflows/ci_setup_gradle.yaml
   intergration_test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup_gradle
       - name: Gradle Build Action
         uses: gradle/gradle-build-action@v2.2.0
         with:
