--- a/.github/actions/setup_gradle/action.yaml
+++ b/.github/actions/setup_gradle/action.yaml
@@ -8,7 +8,7 @@ runs:
     - uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'adopt'
+        distribution: 'microsoft'
     - run: chmod +x ./gradlew
       shell: bash
     - uses: gradle/wrapper-validation-action@v1.0.4
