--- a/.github/actions/setup_gradle/action.yaml
+++ b/.github/actions/setup_gradle/action.yaml
@@ -1,14 +1,14 @@
-name: 'Setup Gradle'
-description: 'Sets gradle up with stuff'
+name: Setup Gradle
+description: Sets gradle up with stuff
 
 runs:
-  using: "composite"
+  using: composite
   steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        java-version: '17'
-        distribution: 'microsoft'
+        java-version: 17
+        distribution: microsoft
     - run: chmod +x ./gradlew
       shell: bash
     - uses: gradle/wrapper-validation-action@v1.0.4
