--- a/.github/workflows/ci_diktat.yaml
+++ b/.github/workflows/ci_diktat.yaml
@@ -10,8 +10,10 @@ jobs:
   run_diktat:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup_gradle
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Setup Gradle
+        uses: ./.github/actions/setup_gradle
       - name: Run diktat
         uses: gradle/gradle-build-action@v2.2.0
         with:
